@@ -1,3 +1,7 @@
+2018-08-06  Danilo Chang  <ray2501@gmail.com>
+
+    * generic/mdb.c: Update LMDB source code.
+
 2018-06-22  Danilo Chang  <ray2501@gmail.com>
 
     * Setup version to v0.4.0 to test
